--- a/www/static/koji.css
+++ b/www/static/koji.css
@@ -46,10 +46,15 @@ a:hover {
     clear: left;
 }
 
-#rhLogo {
+#headerSearch {
     float: right;
-    margin-right: 15px;
-    margin-top: 6px;
+    margin-right: 10px;
+    margin-top: 15px;
+}
+
+#headerSearch input,
+#headerSearch select {
+    font-size: smaller;
 }
 
 #kojiLogo {
