tasks page: add a View selector and move toplevel from State to Method

--- a/www/static/koji.css
+++ b/www/static/koji.css
@@ -83,6 +83,10 @@ p#footer a {
     display: none;
 }
 
+.disabled {
+    color: #808080;
+}
+
 #mainNav {
     width: 100%;
     background-color: #009;
