don't paginate the build and task lists on the front page, to avoid doing "select count(*)"'s on large tables and thereby improve performance

--- a/www/static/koji.css
+++ b/www/static/koji.css
@@ -221,6 +221,10 @@ div.dataHeader {
     font-weight: bold;
 }
 
+div.noPaginate {
+    margin-bottom: 10px;
+}
+
 div.pageHeader {
     margin-bottom: 10px;
     font-weight: bold;
