- add the description and comment fields to the host table  - add the edit-host CLI command to allow editing of the arches, capacity, description, and comment fields of a host  - add the --comment option to the enable-host and disable-host commands, to allow specifying a reason for changing the state of a host  - display the description and comment on the hostinfo page

--- a/www/static/koji.css
+++ b/www/static/koji.css
@@ -418,7 +418,7 @@ abbr {
     cursor: help;
 }
 
-.changelog {
+.changelog, .rpmheader, .usertext {
     font-family: monospace;
     font-size: medium;
     white-space: pre;
@@ -441,12 +441,6 @@ span#loginInfo {
 
 .smaller {
     font-size: smaller;
-}
-
-.rpmheader {
-    font-family: monospace;
-    font-size: medium;
-    white-space: pre;
 }
 
 .error {
